Try to control JVM heap